--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -278,12 +278,8 @@
     -moz-transition: all .2s ease-in;
   }
 
-  a:hover i.fa-facebook {
+  a:hover i.icon-anchor {
     background-color: #3A5897;
-    color: #fff;
-  }
-  a:hover i.fa-twitter {
-    background-color: #00ABEC;
     color: #fff;
   }
 }
