--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -1,6 +1,6 @@
 <div class="social-icons">
   <ul class="text-left">
-    <li><a href="{{ site.author.facebook }}" target="_blank"><i class="fa fa-facebook"></i></a></li>
-    <li><a href="{{ site.author.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="{{ site.author.linkedin }}" target="_blank"><i class="fa fa-linkedin icon-anchor"></i></a></li>
+    <li><a href="{{ site.author.github }}" target="_blank"><i class="fa fa-github icon-anchor"></i></a></li>
   </ul>
 </div>
