alterando mensagem da pagina inicial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,9 @@
     {% if page.slug == 'home' %}
       <h2 class="txt-center box-main">
         Desenvolvedor Web, Graduado em banco de dados, especializando em desenvolvimento
-        Web e Mobile e Zend Certified PHP Engineer, sempre procurando aprender mais e compartilhar o
-        conhecimento, seja no Github, nesse blog, ou em qualquer outro lugar.
-        As linguagens que mais se dedica atualmente são
-        <strong>PHP</strong> e <strong>Javascript</strong>.
+        Web / Mobile e Zend Certified PHP Engineer, sempre procurando aprender mais e compartilhar o
+        conhecimento, atuamente se dedicando mais nas linguagens <strong>PHP</strong> e <strong>Javascript</strong>,
+        além de gostar de estudar <i>padrões de projetos</i> e <i>clean code</i>.
       </h2>
     {% endif %}
 
