alterando mensagem da pagina inicial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
     {% if page.slug == 'home' %}
       <h2 class="txt-center box-main">
         Desenvolvedor Web, Graduado em banco de dados, especializando em desenvolvimento
-        Web / Mobile e Zend Certified PHP Engineer, sempre procurando aprender mais e compartilhar o
+        Web / Mobile e Zend Certified PHP Engineer, esta sempre procurando aprender mais e compartilhar o
         conhecimento, atuamente se dedicando mais nas linguagens <strong>PHP</strong> e <strong>Javascript</strong>,
         além de gostar de estudar <i>padrões de projetos</i> e <i>clean code</i>.
       </h2>
