--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
       <h2 class="txt-center box-main">
         Desenvolvedor Web, Graduado em banco de dados, especializando em desenvolvimento
         Web / Mobile e Zend Certified PHP Engineer, esta sempre procurando aprender mais e compartilhar o
-        conhecimento, atuamente vem se dedicando mais nas linguagens <strong>PHP</strong> e <strong>Javascript</strong>,
+        conhecimento, atualmente vem se dedicando mais nas linguagens <strong>PHP</strong> e <strong>Javascript</strong>,
         além de gostar de estudar <i>padrões de projetos</i> e <i>clean code</i>.
       </h2>
     {% endif %}
