--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -189,7 +189,7 @@ pre {
 @media (min-width: 801px) {
   .box-main {
     width: 80%;
-    margin: 100px auto !important;
+    margin: 7% auto !important;
     line-height: 120%;
   }
   .box-nav {
@@ -203,7 +203,7 @@ pre {
 @media (max-width: 800px) and (min-width: 496px)  {
   .box-main {
     width: 80%;
-    margin: 80px auto !important;
+    margin: 7% auto !important;
     line-height: 120%;
     font-size: 25px;
   }
@@ -218,7 +218,7 @@ pre {
 @media (max-width: 495px)  {
   .box-main {
     width: 80%;
-    margin: 20px auto !important;
+    margin: 7% auto !important;
     line-height: 120%;
     font-size: 20px;
   }
