--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ slug: single
 
       <span>Share this: </span>
 
-      <a href="http://twitter.com/share?text={{page.title}}&amp;url={{site.url}}{{ page.url }}&amp;hashtags=web,dev,blog,soudev&amp;via=deoliveiralucas"
+      <a href="http://twitter.com/share?text={{page.title}}&amp;url={{site.url}}{{ page.url }}&amp;hashtags=web,dev,blog,soudev&amp;via=nandomoreirame"
       onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
         <i class="fa fa-twitter-square"></i>
       </a>
