--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -197,6 +197,7 @@ pre {
   }
   .font-courier {
     font-family: Courier new;
+    text-transform: lowercase;
   }
 }
 
@@ -228,6 +229,7 @@ pre {
   }
   .font-courier {
     font-family: Courier new;
+    text-transform: lowercase;
     font-size: 22px;
   }
 }
