--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -2,6 +2,7 @@
   <ul class="text-left">
     <li><a href="{{ site.author.linkedin }}" target="_blank"><i class="fa fa-linkedin icon-anchor"></i></a></li>
     <li><a href="{{ site.author.github }}" target="_blank"><i class="fa fa-github icon-anchor"></i></a></li>
+    <li><a href="{{ site.author.twitter }}" target="_blank"><i class="fa fa-twitter icon-anchor"></i></a></li>
     <li><a href="mailto:{{ site.author.gmail }}"><i class="fa fa-envelope icon-anchor"></i></a></li>
   </ul>
 </div>
