--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,10 +23,9 @@
 
     {% if page.slug == 'home' %}
       <h2 class="txt-center box-main">
-        Desenvolvedor Web, Graduado em banco de dados, especializando em desenvolvimento
-        Web / Mobile e Zend Certified PHP Engineer, está sempre procurando aprender mais e compartilhar o
-        conhecimento, atualmente vem se dedicando as linguagens <strong>PHP</strong> e <strong>Javascript</strong>,
-        além de gostar de estudar <i>padrões de projetos</i> e <i>clean code</i>.
+        <strong><a href="https://twitter.com/oliveiralucasbr">@oliveiralucasbr</a></strong><span class="fa fa-twitter"></span><br>
+        Web Developer, graduated in Database, coursing post graduation in Web / Mobile Development and Zend Certified PHP Engineer. 
+        In this blog I publish subjects related to the world of web development and sofware engineering.
       </h2>
     {% endif %}
 
