--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
       <h2 class="txt-center box-main">
         <strong><a href="https://twitter.com/oliveiralucasbr">@oliveiralucasbr</a></strong> <span class="fa fa-twitter"></span><br>
         Web Developer, graduated in Database, coursing post graduation in Web / Mobile Development and Zend Certified PHP Engineer. 
-        In this blog I publish issues related to the world of web development and sofware engineering.
+        In this blog I publish topics related to the world of web development and sofware engineering.
       </h2>
     {% endif %}
 
