--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="{% block description %}{% endblock %}" />
     <meta name="google-site-verification" content="Mj7bI0zpmfU5IlITkprMTmee9aNK3cwxwMTG9McpkIQ" />
+    <link rel="icon" href="/assets/favicon.png" />
 
     <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Cantora+One" rel="stylesheet">
