--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -19,7 +19,7 @@
         Hi! My name is Lucas de Oliveira.<br>
         I am a Web Developer, currently working as Backend Developer at <a target="_blank" href="http://www.acruxx.com.br/">Acruxx</a>,
         living in Cruzeiro - São Paulo. I'm a <a target="_blank" href="http://www.zend.com/en/yellow-pages/ZEND027995">Zend Certified PHP Engineer</a>,
-        graduated in database at <a target="_blank" href="http://www.fateccruzeiro.edu.br/">Fatec Cruzeiro</a> and post graduated in web development at
+        graduated in Database at <a target="_blank" href="http://www.fateccruzeiro.edu.br/">Fatec Cruzeiro</a> and post graduated in Web Development at
         <a target="_blank" href="http://unisal.br/unidades/lorena-sao-joaquim/">Unisal Lorena</a>.
     </p>
 
@@ -37,6 +37,10 @@
     <h2 class="mt-4">Presentations</h2>
 
     <ul class="list-group">
+        <li class="mt-1">
+            <a target="_blank" href="https://speakerdeck.com/deoliveiralucas/dicas-para-iniciar-um-projeto-em-php">Dicas para iniciar um projeto em PHP - PHPVale</a>
+            <span class="text-muted small">2019 May 03, 08h</span>
+        </li>
         <li class="mt-1">
             <a target="_blank" href="https://pt.slideshare.net/deoliveiralucasnet/php2018-phpvale">PHP em 2018 - PHPVale</a>
             <span class="text-muted small">2018 May 05, 17h</span>
