--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -7,6 +7,8 @@
     <meta name="google-site-verification" content="Mj7bI0zpmfU5IlITkprMTmee9aNK3cwxwMTG9McpkIQ" />
     <link rel="icon" href="/assets/favicon.ico" />
 
+    {% block seo %}{% endblock %}
+
     <!-- CSS -->
     <link href="https://fonts.googleapis.com/css?family=Cantora+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
