fix meta twitter tag

--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -8,7 +8,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="@oliveiralucasbr" />
 <meta property="og:url" content="http://whoami.deoliveiralucas.net/blog/{{ post.getSlug() }}" />
-<meta property="og:title" content="{{ post.getTitle() }}r" />
+<meta property="og:title" content="{{ post.getTitle() }}" />
 <meta property="og:description" content="{{ shortDescription }}" />
 {% endblock %}
 
