--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -1,3 +1,12 @@
+body{
+    font-size: 1.2rem;
+}
+.list-group{
+    list-style-type: none;
+}
+.list-group li:not(:first-child){
+    margin-top: 0.8em !important;
+}
 .container{
     max-width: 800px;
     font-family: 'Varela Round', sans-serif;
@@ -5,6 +14,12 @@
 }
 .container .title{
     font-family: 'Cantora One', sans-serif;
+}
+.container .custom-nav{
+    font-size: 1rem;
+}
+.container .post-content h2{
+    margin-top: 25px;
 }
 .container a{
     border-bottom: 1px #721c24 solid;
@@ -24,4 +39,9 @@
     text-decoration: none;
     border-bottom: 2px #721c24 solid;
     color: #721c24;
+}
+
+/* overwrite css */
+.mt-5{
+    margin-top: 2rem !important;
 }
