--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -33,7 +33,7 @@
 
         <script>
             var disqus_config = function () {
-                this.page.url = window.location.href;
+                this.page.url = "{{ sitePostUrl ~ '/' ~ post.getSlug }}";
                 this.page.identifier = "{{ post.getSlug }}";
             };
 
