update my personal description

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -17,7 +17,7 @@
 
     <p class="paragraph">
         Hi! My name is Lucas de Oliveira.<br>
-        I am a Web Developer, currently working as Backend Developer at <a target="_blank" href="http://www.acruxx.com.br/">Acruxx</a>,
+        I am a Web Developer, currently working as Backend Developer at 2SOW,
         living in Cruzeiro - São Paulo. I'm a <a target="_blank" href="http://www.zend.com/en/yellow-pages/ZEND027995">Zend Certified PHP Engineer</a>,
         graduated in Database at <a target="_blank" href="http://www.fateccruzeiro.edu.br/">Fatec Cruzeiro</a> and post graduated in Web Development at
         <a target="_blank" href="http://unisal.br/unidades/lorena-sao-joaquim/">Unisal Lorena</a>.
